Revision history for Lingua-Jspell

1.50_05 March 23, 2008
	- Portability to Microsoft Windows under development
	  (although without ncurses => no interactive spell checking)
	  - Tested with Strawberry Perl v5.10.0

1.50_04 March 21, 2008
	- Corrected scripts/installdic.in to create directory before
      copying files.

1.50_03 March 20, 2008
	- Corrected t/pod-coverage.t test to work with perl 5.10.0.
	- Added script to install Portuguese dictionary dinamically.

1.50_02 March 19, 2008
	- Added documentation to jspell-dict script
	- Added installation rules for man pages
	- Added the Lingua-Jspell-DictManager module

1.50_01	March 19, 2008
	- First version as a Perl Module.
	- Has some building problems that should be fixed before 1.50.
