@@ -2,6 +2,7 @@ Changes
 MANIFEST
 Makefile.PL
 README
+jspell.pc.in
 
 lib/Lingua/Jspell.pm
 lib/Lingua/Jspell/DictManager.pm
